boggersJS/test/unit/components/dialogue/scripts/valid/branch-nested.dscript
################################
##### MAIN PATH
################################

Bob angry M
I am angry right now.

Bob angry C
I am angry right now. Are you?
Yes -> FRIENDSHIP
No -> FIGHT
END

    ################################
    ##### FIGHT PATH
    ################################

    Bob pissed M FIGHT
    Okay then, FIGHT!

    Bob pissed M FIGHT
    TIME TO BOX.

    YOU scared C FIGHT
    Pick an attack.
    Punch -> LOSE
    Kick -> WIN
    END

        ################################
        ##### LOSE PATH
        ################################

        Bob happy M LOSE
        Har har! Bad move.

        YOU dead M LOSE
        I am dead.

        ################################
        ##### WIN PATH
        ################################

        Bob sad M WIN
        Oh no! You found the right move...

        YOU happy M WIN
        I am not dead.

    ################################
    ##### FRIENDSHIP PATH
    ################################

    Bob pissed M FRIENDSHIP
    Okay then, FRIEND!

    Bob pissed M FRIENDSHIP
    TIME FOR SHOTS.
